[project]
name = "ia-ubot-pruebas-unitarias"
version = "0.1.0"
description = "Unitary set of test for RAG systems."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.12.14",
    "ijson>=3.4.0",
    "openai>=1.97.0",
    "polars>=1.31.0",
    "ragas>=0.3.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "mypy>=1.17.0",
    "notebook>=7.4.4",
]
