[project]
name = "ia-ubot-pruebas-unitarias"
version = "0.1.0"
description = "Unitary set of test for RAG systems."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.12.14",
    "evals>=3.0.1.post1",
    "fastexcel>=0.14.0",
    "ijson>=3.4.0",
    "langfuse>=3.3.0",
    "numpy>=2.1.3",
    "openai>=1.97.0",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tiktoken>=0.9.0",
    "websockets>=15.0.1",
    "xlsxwriter>=3.2.5",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "mypy>=1.17.0",
    "notebook>=7.4.4",
]